-
Bug
-
Resolution: Done
-
P1: Critical
-
5.11.2
-
None
-
-
88a0246a46c30e08e9730d16cf8739773447d058 (qt/qtwayland/5.12)
When running any QtQuick app with windows render loop (QSG_RENDER_LOOP=windows), it terminates on weston with
zxdg_surface_v6@19: error 3: xdg_surface has never been configured
and on QtWaylandCompositor it silently fails to display the window.
It works fine with wl-shell.
This patch doesn't help: https://code.qt.io/cgit/qt/qtwayland.git/commit/?h=dev&id=eddf343b3d2bd0c9b19cafc5e055f415a09592c6
For Gerrit Dashboard: QTBUG-71345 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
240811,8 | Client: Don't attach buffers to unexposed windows | 5.12 | qt/qtwayland | Status: MERGED | -2 | 0 |
244787,1 | Client: Don't attach buffers to unexposed windows | 5.12.0 | qt/qtwayland | Status: ABANDONED | 0 | 0 |